1.增加封面 2.优化项目结构 3.播放可以设置是否自动播放

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,34 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <SurfaceView
-        android:id="@+id/video_play"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="16:9"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/seek_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:max="100"
-        app:layout_constraintTop_toBottomOf="@id/video_play" />
-
     <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/seek_bar">
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/b_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="开始/暂停" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
