--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -15,11 +15,21 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <View
-                android:id="@+id/v_space"
+            <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="wrap_content"
+                android:background="#FF00"
+                android:gravity="center"
+                android:padding="16dp"
+                android:text="我是标题"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="200dp" />
 
             <com.akame.videoplayer.AkVideoPlayView
                 android:id="@+id/video_play"
@@ -27,14 +37,24 @@
                 android:layout_height="400dp"
                 app:layout_constraintDimensionRatio="16:9"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/v_space" />
+                app:layout_constraintRight_toRightOf="parent" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
                 app:layout_constraintTop_toTopOf="parent" />
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
