--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -6,49 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".VideoPlayActivity">
 
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FF00"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="我是标题"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#FF00"
-                android:gravity="center"
-                android:padding="16dp"
-                android:text="我是标题"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
             <View
-                android:layout_width="match_parent"
-                android:layout_height="200dp" />
-
-            <com.akame.videoplayer.AkVideoPlayView
-                android:id="@+id/video_play"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                app:layout_constraintDimensionRatio="16:9"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp" />
-
-            <View
+                android:background="@color/black"
+                android:id="@+id/v_01"
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+            <com.akame.videoplayer.AkVideoPlayView
+                android:id="@+id/video_play"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="16:9"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/v_01" />
+
+            <EditText
+                android:id="@+id/et_01"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@id/video_play" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                app:layout_constraintTop_toBottomOf="@id/et_01" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
     <View
