--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_height="wrap_content">
-        <com.akame.videoplayer.AkVideoPlayView
+        <com.akame.videoplayer.wigth.VideoPlayView
             android:layout_width="match_parent"
             android:layout_height="100dp"/>
 
