--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -16,7 +16,8 @@
         android:text="我是标题"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -25,18 +26,18 @@
         app:layout_constraintTop_toBottomOf="@id/tv_title">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:focusableInTouchMode="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <View
-                android:background="@color/black"
                 android:id="@+id/v_01"
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.akame.videoplayer.AkVideoPlayView
+            <com.akame.videoplayer.wigth.SimpleVideoPlayer
                 android:id="@+id/video_play"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -62,7 +63,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
